[gd_scene load_steps=3 format=3 uid="uid://0hl7u7wwdcc5"]

[ext_resource type="Script" path="res://User Interface/script/alert.gd" id="1_c8oqt"]
[ext_resource type="Theme" uid="uid://dbpq13a2ewpys" path="res://User Interface/GUI Theme/alert.tres" id="1_crgc8"]

[node name="Alert" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_crgc8")
script = ExtResource("1_c8oqt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_crgc8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_crgc8")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_crgc8")

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
theme = ExtResource("1_crgc8")

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_crgc8")
collapsed = true
dragger_visibility = 1

[node name="Cancel" type="Button" parent="CenterContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../Enter")
focus_next = NodePath("../Enter")
theme = ExtResource("1_crgc8")
text = "Cancel"

[node name="Enter" type="Button" parent="CenterContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Cancel")
focus_next = NodePath("../Cancel")
theme = ExtResource("1_crgc8")
text = "Enter"

[connection signal="gui_input" from="CenterContainer" to="." method="_on_gui_input"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HSplitContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HSplitContainer/Enter" to="." method="_on_enter_pressed"]
